--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -12,7 +12,7 @@ body {
 
 p {
   font-size: 14px;
-  color: #5a5a5a;
+  color: #121212;
   font-weight: 300;
   line-height: 25px;
 }
@@ -956,4 +956,3 @@ body.lb-disable-scrolling {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-
